Added the data file importer. Changed InOrOut to Out but I'm having problems changing the name in the Designer. Closing and reopening to make the change

--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -1,13 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="WRST_Caribou3.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString"
-            connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString" connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
+    <userSettings>
+        <WRST_Caribou3.My.MySettings>
+            <setting name="Animal_MovementConnectionString" serializeAs="String">
+                <value>Data Source=INPAKROVMAIS;Initial Catalog=Animal_Movement;Integrated Security=True</value>
+            </setting>
+            <setting name="SearchAreas" serializeAs="String">
+                <value>Alaska,Copper River,Mt. Drum,Mt. Sanford,Yukon</value>
+            </setting>
+        </WRST_Caribou3.My.MySettings>
+    </userSettings>
 </configuration>
