Added import data tool to captures form.

--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -6,7 +6,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString" connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString"
+            connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -18,6 +20,9 @@
             </setting>
             <setting name="SearchAreas" serializeAs="String">
                 <value>Alaska,Copper River,Mt. Drum,Mt. Sanford,Yukon</value>
+            </setting>
+            <setting name="SharedDirectory" serializeAs="String">
+                <value>J:\Monitoring\Caribou\WRST</value>
             </setting>
         </WRST_Caribou3.My.MySettings>
     </userSettings>
