--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -6,9 +6,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString"
-            connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString" connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
