--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -6,7 +6,9 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString" connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString"
+            connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -17,7 +19,7 @@
                 <value>Data Source=INPAKROVMAIS;Initial Catalog=Animal_Movement;Integrated Security=True</value>
             </setting>
             <setting name="SearchAreas" serializeAs="String">
-                <value>Alaska,Copper River,Mt. Drum,Mt. Sanford,Yukon</value>
+                <value>Entire area,Alaska,Copper River,Mt. Drum,Mt. Sanford,Yukon</value>
             </setting>
             <setting name="SharedDirectory" serializeAs="String">
                 <value>J:\Monitoring\Caribou\WRST</value>
