--- a/WRST_Caribou3/My Project/Settings.settings
+++ b/WRST_Caribou3/My Project/Settings.settings
@@ -14,7 +14,7 @@
       <Value Profile="(Default)">Data Source=INPAKROVMAIS;Initial Catalog=Animal_Movement;Integrated Security=True</Value>
     </Setting>
     <Setting Name="SearchAreas" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Alaska,Copper River,Mt. Drum,Mt. Sanford,Yukon</Value>
+      <Value Profile="(Default)">Entire area,Alaska,Copper River,Mt. Drum,Mt. Sanford,Yukon</Value>
     </Setting>
     <Setting Name="SharedDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)">J:\Monitoring\Caribou\WRST</Value>
