Created splash screen. One hard coded Sql query had a residual reference to the column Out that was changed back to In. Fixed.

--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -7,7 +7,7 @@
     </configSections>
     <connectionStrings>
         <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString"
-            connectionString="Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True"
+            connectionString="Data Source=inpyugamsvm01\nuna;Initial Catalog=WRST_Caribou;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
