--- a/WRST_Caribou3/My Project/Settings.settings
+++ b/WRST_Caribou3/My Project/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="WRST_CaribouConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=inpyugamsvm01\nuna;Initial Catalog=WRST_Caribou;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=inpyugamsvm01\nuna_dev;Initial Catalog=WRST_Caribou;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=inpyugamsvm01\nuna;Initial Catalog=WRST_Caribou;Integrated Security=True</Value>
     </Setting>
     <Setting Name="Animal_MovementConnectionString" Type="System.String" Scope="User">
       <Value Profile="(Default)">Data Source=INPAKROVMAIS;Initial Catalog=Animal_Movement;Integrated Security=True</Value>
