--- a/WRST_Caribou3/WRST_Caribou3.vbproj
+++ b/WRST_Caribou3/WRST_Caribou3.vbproj
@@ -176,6 +176,12 @@
     <Compile Include="SplashScreen.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="SurvivorshipForm.Designer.vb">
+      <DependentUpon>SurvivorshipForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SurvivorshipForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Utilities.vb" />
     <Compile Include="WRST_CaribouDataSet.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -211,6 +217,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SplashScreen.resx">
       <DependentUpon>SplashScreen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SurvivorshipForm.resx">
+      <DependentUpon>SurvivorshipForm.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
