--- a/WRST_Caribou3/WRST_Caribou3.vbproj
+++ b/WRST_Caribou3/WRST_Caribou3.vbproj
@@ -176,6 +176,12 @@
     <Compile Include="ResultsForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="SelectDeploymentForm.Designer.vb">
+      <DependentUpon>SelectDeploymentForm.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SelectDeploymentForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SettingsForm.Designer.vb">
       <DependentUpon>SettingsForm.vb</DependentUpon>
     </Compile>
@@ -223,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ResultsForm.resx">
       <DependentUpon>ResultsForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SelectDeploymentForm.resx">
+      <DependentUpon>SelectDeploymentForm.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SettingsForm.resx">
       <DependentUpon>SettingsForm.vb</DependentUpon>
