--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -24,6 +24,12 @@
             <setting name="SharedDirectory" serializeAs="String">
                 <value>J:\Monitoring\Caribou\WRST</value>
             </setting>
+            <setting name="IRMAProjectReference" serializeAs="String">
+                <value>https://irma.nps.gov/DataStore/Reference/Profile/2217176</value>
+            </setting>
+            <setting name="IRMADataDeliverablesDatasetReference" serializeAs="String">
+                <value>https://irma.nps.gov/DataStore/Reference/Profile/2293883</value>
+            </setting>
         </WRST_Caribou3.My.MySettings>
     </userSettings>
 </configuration>
