--- a/WRST_Caribou3/My Project/Settings.settings
+++ b/WRST_Caribou3/My Project/Settings.settings
@@ -19,5 +19,11 @@
     <Setting Name="SharedDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)">J:\Monitoring\Caribou\WRST</Value>
     </Setting>
+    <Setting Name="IRMAProjectReference" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://irma.nps.gov/DataStore/Reference/Profile/2217176</Value>
+    </Setting>
+    <Setting Name="IRMADataDeliverablesDatasetReference" Type="System.String" Scope="User">
+      <Value Profile="(Default)">https://irma.nps.gov/DataStore/Reference/Profile/2293883</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
