Adding utility to export a flight dataset but it requires a reference to SkeeterUtilities which is built against a higher .NET. Commit prior to upgrading whole project.

--- a/WRST_Caribou3/WRST_Caribou3.vbproj
+++ b/WRST_Caribou3/WRST_Caribou3.vbproj
@@ -118,6 +118,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\SkeeterDataTablesTranslator\SkeeterDataTablesTranslator\bin\Release\SkeeterDataTablesTranslator.dll</HintPath>
     </Reference>
+    <Reference Include="SkeeterUtilities">
+      <HintPath>..\..\SkeeterUtilities\SkeeterUtilities\bin\Release\SkeeterUtilities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
