Edited the ResultsForm because the query description was docked full so it was partially hidden under the header. Edited the help file.

--- a/WRST_Caribou3/App.config
+++ b/WRST_Caribou3/App.config
@@ -6,12 +6,10 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString"
-            connectionString="Data Source=inpyugamsvm01\nuna;Initial Catalog=WRST_Caribou;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="WRST_Caribou3.My.MySettings.WRST_CaribouConnectionString" connectionString="Data Source=inpyugamsvm01\nuna;Initial Catalog=WRST_Caribou;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
         <WRST_Caribou3.My.MySettings>
